<resources>
    <string name="app_name">KotlinGod</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Signup</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="textToSignup">Create a new account</string>
    <string name="setLate">set late time</string>
    <string name="addBranch">Add Branch</string>
    <string name="progressDialog">Wait a moment..</string>
    <string name="lateAttendance">Choose Late Attendance Time</string>
    <string name="logout">Logout</string>
    <string name="branch">Branch</string>
    <string name="unsuccess_please_try_again">Unsuccess,Please try again.</string>
    

</resources>