<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/companyName1"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2.5"
                android:text="Company name"
                android:textSize="25dp" />
            <Button
                android:id="@+id/firstLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_weight="1"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addBranch"
                android:layout_weight="1"/>
            <Button
                android:layout_marginLeft="5dp"
                android:id="@+id/companyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setLate"
                android:layout_weight="1"/>

        </LinearLayout> <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sectorList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

       />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>